version 10.0
date: dd/mm/yyyy
  * allowed to disable validation on commit in projects with SHACL validation enabled
  * introduced batch SHACL validation of a repository producing a validation report
  * added configuration parameters for SHACL
  * added inconsistency report
  * added file from http://prefix.cc/ containing most used prefix-namespace to resolve most used namespaces 
  * added the Spreadsheet lifter to load data from a spreadsheet
  * update core settings to the new settings management framework (including the use of YAML to persist them)
  * upgrade the PUSettings of the RenderingEngine extension point to the new framework (including the use of YAML to persist them)
  * implemented resource view custom sections and enabled the customization of the resource view associated with a role
  * implemented the support for Java enums in STProperties
  * implemented labels support for project rendering
  * implemented support for email verification during the user registration procedure
  * allowed administrator to activate a new registered user through a link sent via email
  * allowed administrator to enable remote provisioning of CODA components
  * in Sheet2RDF extended support for triples deletion
  * added Scottish Gaelic and Welsh to the system languages
  * turned OperationOnResourceDeniedException into a RuntimeException as it may be thrown from an interceptor
  * made the configuration of rendering engines more user friendly (i.e. renaming ${languages} to ${userLangs} and ${show} to ${labels})
  * enabled events on settings managers
  * replaced PMKI references with "ShowVoc"
  * fixed bug related to matching linkset targets to datasets registered in the metadata registry
  * updated dependency on Coda 1.7.2
  * updated dependency on Sheet2RDF 4.2.0
  * updated dependency on MAPLE 0.0.8

version 9.1
date: 28/04/2021
  * added support for "no language tagged" labels in rendering engine