@@ -2,6 +2,7 @@ version 10.0
 date: dd/mm/yyyy
   * allowed to disable validation on commit in projects with SHACL validation enabled
   * introduced batch SHACL validation of a repository producing a validation report
+  * updated the connector for the EU Open Data Portal (being dismissed) to use the SPARQL endpoint of data.europa.eu
   * added configuration parameters for SHACL
   * added inconsistency report
   * added file from http://prefix.cc/ containing most used prefix-namespace to resolve most used namespaces 
